<resources>
    <string name="app_name">Nexxus</string>
    <string name="tag_line">Professional Networking made easy</string>
    <string name="login_with_linkedin">Login with LinkedIn</string>
    <string name="login_failure">Failed to login with LinkedIn</string>
    <string name="attendees">Attendees</string>
    <string name="similarities_in_common">%d things in common</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="event_list">Event List</string>
    <string name="profile">Profile</string>
    <string name="nearby">Nearby</string>
    <string name="nearby_attendees">Nearby Attendees</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="in_common">In Common</string>
    <string name="icebreaker">Icebreaker</string>
    <string name="highly_skilled_at">Highly skilled in Android</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="from_to" formatted="false">%s - %s</string>
    <string name="from_to_present">%s - Present</string>
    <string name="full_name" formatted="false">%s %s</string>
    <string name="location_permission_rationale">Location permissions are needed to fetch nearby events</string>
    <string name="ok">Ok</string>
    <string name="worked_at">Worked at %s</string>
    <string name="studied_at">Studied at %s</string>
    <string name="say_something">Say something...</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="search_by">Search by name, company, university..</string>
    <string name="after_checkin">Connect with others attending this event</string>
    <string name="show_me">Show me</string>
    <string name="checkin">Check-In</string>
    <string name="checkedin">Checked-In</string>
    <string name="before_checkin">"Check-in to the event to view all attendees</string>
    <string name="also_studied_at">Also studied at %s</string>
    <string name="also_worked_at">Also worked at %s</string>
    <string name="message_also_worked_at" formatted="false">Hey %s, looks like you have also worked at %s</string>
    <string name="message_also_studied_at" formatted="false">Hey %s, looks like you have also studied at %s</string>
    <string name="message_things_in_common" formatted="false">Hey %s, looks like we have a few things in common</string>
    <string name="have_checked_in">%d people have checked in</string>
    <string name="why_so_serious">%s, why so serious?</string>
    <string name="send_a_message">Send a message :)</string>
    <string name="reply">Reply</string>
    <string name="notif_content_sent">Message sent!</string>
    <string name="messages">Messages</string>

    <!-- onboarding strings -->
    <string name="onboarding_find_attenedees">Know the attendees</string>
    <string name="onboarding_find_attenedees_subtitle">Find similarities, network better</string>

    <string name="onboarding_message">Engage with messaging</string>
    <string name="onboarding_message_subtitle">Break the ice, send the message</string>

    <string name="onboarding_search">Universal search</string>
    <string name="onboarding_search_subtitle">Search by name, company, school</string>

    <string name="onboarding_nearby">Nearby attendees</string>
    <string name="onboarding_nearby_subtitle">Feeling shy? Use nearby to find out folks open to network</string>

    <string name="start_networking">Get started</string>

    <string name="google_maps_api_key">AIzaSyAnPKA09fo3xX3ndsrgcITOAfAZ3N2Ifps</string>
    <string name="nearby_key">AIzaSyAKeW0hbeRA14tgyC672_Xyq8cUwaz0vtI</string>
    <string name="direct_message">Direct Message</string>
</resources>
