<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/event_list_nav"
        android:title="@string/event_list"
        android:icon="@drawable/ic_event_list" />

    <item
        android:id="@+id/profile_nav"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile" />

    <item
        android:id="@+id/nearby_nav"
        android:title="@string/nearby"
        android:icon="@drawable/ic_nearby" />

    <item
        android:id="@+id/direct_messages"
        android:title="Direct Message">
        <menu>
            <item
                android:title="placeholder" />
        </menu>
    </item>

    <item
        android:id="@+id/logout_nav"
        android:title="@string/logout"
        android:icon="@drawable/ic_log_out" />

</menu>