<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="60dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/tvNexxus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/white"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tvSubhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:textColor="@android:color/white"
        android:text="@string/tag_line" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_button_with_border"
        android:textColor="@android:color/white"
        android:layout_marginTop="100dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold"
        android:text="@string/login_with_linkedin"/>

</LinearLayout>